# pdfchat

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  makefile  pyproject.toml  settings.py
app/: database.py  model_helpers.py  models.py  schemas.py  tasks.py  utils.py
tests/: mock_data.py  test_main_user_auth.py
